# SuperPacker

./: .gitignore  .gitmodules  Build.sh  CMakeLists.txt  Demo2.json  Install.sh  README.md  test.json
Sources/: CMakeLists.txt
Sources/SuperPacker/Private/: ApiInteface.cpp  IniLoader.cpp  Logger.cpp  Main.cpp  OpenGLContext.cpp  SuperPacker.cpp
Sources/SuperPacker/Public/: ApiInteface.h  Image.h  IniLoader.h  Logger.h  OpenGLContext.h  SuperPacker.h  Types.h
Sources/Visualizer/: CMakeLists.txt
Sources/Visualizer/Private/: ImageViewer.cpp  Main.cpp  OpenGLContext.cpp
Sources/Visualizer/Public/: ImageViewer.h  OpenGLContext.h
Tools/: Build-DebugPHT.sh  Build-Default.sh  CMakeLists.txt  Install.py
include/: event_manager.h  gfx.h  imgui_operators.h
include/packer/: packer.h
resources/: .json  Demo2  Demo2.json  Demo2.spg  appicon.aps  appicon.rc  default.json  resource.h  test  test.json  test.spg
src/: file_actions.cpp  file_actions.h  file_resource.cpp  file_resource.h  gfx.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  logger.cpp  logger.h  main.cpp  texture.cpp  texture.h  window_interface.cpp  window_interface.h
src/packer/: code.cpp  code.h  packer.cpp  types.h
src/ui/: basic_nodes.cpp  basic_nodes.h  channel.cpp  channel.h  graph.cpp  graph.h  graph_browser.cpp  graph_browser.h  graph_editor_widget.cpp  graph_widgets.h  main_window.cpp  main_window.h  node.cpp  node.h  node_widget.cpp  node_widget.h  out_shader.cpp  out_shader.h  packer_ui.cpp  packer_ui.h  pin.cpp  pin.h  run_widget.cpp  widget_edit_widget.cpp
src/ui/nodes/: node_constant.cpp  node_constant.h  node_maths.cpp  node_maths.h  node_string.cpp  node_string.h  node_texture.cpp  node_texture.h  nodes_misc.cpp  nodes_misc.h
